# steamdeck-Controls

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build_steamdeck.sh  build_windows.bat  test_client.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: rust.yml
server/: Cargo.toml  imgui.ini
server/src/: controller_receiver.rs  main.rs  virtual_controller.rs
steamdeck/: Cargo.toml  README.md  imgui.ini
steamdeck/src/: controller.rs  controller_debug.rs  controller_debug_fixed.rs  main.rs  main_console.rs  network.rs  protocol.rs  steam_input.rs  steam_input_config.json  ui.rs
windows/: Cargo.toml  README.md
windows/src/: main.rs  network.rs  ui.rs  virtual_controller.rs
