[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_client"
path = "test_client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.10"
