[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.11"
imgui-winit-support = "0.11"
imgui-wgpu = "0.23"
winit = "0.27"
wgpu = "0.16"
pollster = "0.3"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
