[package]
name = "steamdeck"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "steamdeck"
path = "src/main.rs"

[[bin]]
name = "steamdeck-console"
path = "src/main_console.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusb = "0.9"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui = { version = "0.24", optional = true }
gilrs = "0.10"
steamworks = { version = "0.11", optional = true }
anyhow = "1.0"

[features]
default = ["gui"]
gui = ["eframe", "egui"]
