[package]
name = "steamdeck"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.12"
imgui-winit-support = "0.12"
imgui-wgpu = "0.24"
winit = "0.28"
wgpu = "0.19"
pollster = "0.3"
gilrs = "0.10"
steamworks = "0.10"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
