[package]
name = "windows"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusb = "0.9"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Devices_HumanInterfaceDevice", "Win32_Storage_FileSystem"] }
log = "0.4"
env_logger = "0.10"
eframe = "0.24"
egui = "0.24"
anyhow = "1.0"
vigem-client = "0.1"
chrono = { version = "0.4", features = ["serde"] }
